--- a/RomHack-template.toml
+++ b/RomHack-template.toml
@@ -22,6 +22,8 @@ libs = ["twwgz.a", "external/gcn_c/gcn_c.a"]
 # textures
 "twwgz/tex/blank.tex" = "res/tex/blank.tex"
 "twwgz/tex/twwgz.tex" = "res/tex/twwgz.tex"
+"twwgz/tex/framePause.tex" = "res/tex/framePause.tex"
+"twwgz/tex/framePlay.tex" = "res/tex/framePlay.tex"
 
 # fonts
 "twwgz/fonts/consola.fnt" = "res/fonts/consola.fnt"
